--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/supabase-js": "^2.56.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +27,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "jose": "^6.0.13",
     "lucide-react": "^0.468.0",
     "next": "^15.3.1",
     "react": "^18.2.0",
