--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.2.1",
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.1",
+    "resend": "^6.9.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.67"
